# Robot_HideAndSeek

./: README.md
documentation/: architecture_overview.txt
src/: Actuator.cpp  Actuator.h  CMakeLists.txt  Master.cpp  Master.h  main.cpp
src/Actuator/: Actuator.cpp  Actuator.h  CMakeLists.txt
src/Actuator/PCA9685/: CMakeLists.txt  I2Cdev.h
src/Detector/: CMakeLists.txt  InterfaceDetector.h
src/Detector/basicDetector/: CMakeLists.txt  basicDetector.cpp  basicDetector.h
